--- a/slate/templates/base_slate.html
+++ b/slate/templates/base_slate.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="initial-scale=0.08, user-scalable=no" />
 
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/tech.css' %}"/>
-<link rel="stylesheet" type="text/css" href="{% static 'css/slate.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% static 'slate/css/tech.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% static 'slate/css/slate.css' %}"/>
 
 </head>
 <body>
@@ -19,7 +19,7 @@
     {% endblock %}
 
 <!-- including bootstrap js combined below -->
-<script src="{% static 'js/bootstrap.js' %}"</script>
+<script src="{% static 'slate/js/bootstrap.js' %}"</script>
 
 </div>
 </body>
