zoom interface, draws shapes at a zoomed scale

--- a/slate/templates/artboard.html
+++ b/slate/templates/artboard.html
@@ -61,6 +61,15 @@
   <!--  <div>
         Preview
     </div> -->
+
+    <div id="zoom_sidebar">
+        <a href="javascript:void(0)" class="zoom_in">Zoom In</a>
+        <br />
+        <input type="text" id="zoom_level_display" value="0">
+        <br />
+        <a href="javascript:void(0)" class="zoom_out">Zoom Out</a>
+
+    </div>
 </div>
 
 <div style="position:fixed; top:50%; left: 50%; background: white;" id="loading_cover">
